Fix the scroll bar and div overlapping

--- a/NodeBeacon/static/util/styles/chatter.css
+++ b/NodeBeacon/static/util/styles/chatter.css
@@ -129,7 +129,7 @@ section ul li div {
     -moz-border-radius: 20px;
     border-radius: 20px;
     padding: 10px;
-    margin-top: 220px;
+    margin-top: 240px;
     margin-left: 80px;
     margin-right: 80px;
     padding-top: 0;
@@ -156,10 +156,11 @@ section ul li div {
 
 .backgroundImage {
     position:absolute;
-    left: -100px;
-    top: -200px;
-    right: -100px;
+    top: 0;
     bottom: 0;
+    left: 0;
+    right: 0;
+    
     z-index: -1;
     text-align: center;
     background-color: black;
